--- a/client/index.html
+++ b/client/index.html
@@ -4,11 +4,33 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <!-- <link rel="stylesheet" type="text/css" href="./node_modules/bootstrap/dist/css/bootstrap.css">   -->
+  <link rel="stylesheet" href="css/main.css">
   <title>Stubtrax</title>
 </head>
-<body>
-  
+<body ng-app="Stubtrax">
+
+
+  <h1>hello?</h1>
   <div ng-view></div>
+
+
+
+<!-- Bootstrap -->
+<!-- <script src="./node_modules/jquery/dist/jquery.min.js"></script>
+<script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script> -->
+  
+<!-- Angular -->
+  <script src="angular/angular.min.js"></script>
+  <script src="angular-route/angular-route.min.js"></script>
+  <!-- Angular Bootstrap-UI -->
+  <!-- <script src="./node_modules/angular-ui-bootstrap/dist/ui-bootstrap.js"></script> -->
+  
+  <!-- App -->
+  <script src="app.js"></script>
+  <!-- Controllers -->
+  <script src="controllers/welcomeCtrl.js"></script>
+  <script src="controllers/AuthCtrl.js"></script>
   
 </body>
 </html>
