registering, logging in, logging out

--- a/client/index.html
+++ b/client/index.html
@@ -26,7 +26,10 @@
   <script src="app.js"></script>
   <!-- Controllers -->
   <script src="controllers/welcomeCtrl.js"></script>
-  <script src="controllers/AuthCtrl.js"></script>
+  <script src="controllers/authCtrl.js"></script>
+
+  <script src="factories/authFactory.js"></script>
+  
   
 </body>
 </html>
