--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,10 @@
   <title>Stubtrax</title>
 </head>
 <body ng-app="Stubtrax">
-
+  
+  <header>
+    <div ng-include=" 'partials/navBar.html' "></div>
+  </header>
 
   <h1>hello?</h1>
   <div ng-view></div>
