added buseinss boolean

--- a/client/index.html
+++ b/client/index.html
@@ -30,7 +30,10 @@
   <!-- Controllers -->
   <script src="controllers/welcomeCtrl.js"></script>
   <script src="controllers/authCtrl.js"></script>
+  <script src="controllers/receiptCtrl.js"></script>
+  
 
+  <!-- Factories -->
   <script src="factories/authFactory.js"></script>
   
   
