--- a/client/index.html
+++ b/client/index.html
@@ -14,27 +14,32 @@
     <div ng-include=" 'partials/navBar.html' "></div>
   </header>
 
-  <h1>hello?</h1>
   <div ng-view></div>
 
 
-  
+<!-- ********** - SCRIPTS - ************ -->
+<!-- Bootstrap -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+
 <!-- Angular -->
   <script src="angular/angular.min.js"></script>
   <script src="angular-route/angular-route.min.js"></script>
   <!-- Angular Bootstrap-UI -->
   <!-- <script src="./node_modules/angular-ui-bootstrap/dist/ui-bootstrap.js"></script> -->
   
-  <!-- App -->
+<!-- App -->
   <script src="app.js"></script>
-  <!-- Controllers -->
+
+<!-- Controllers -->
   <script src="controllers/welcomeCtrl.js"></script>
   <script src="controllers/authCtrl.js"></script>
-  <script src="controllers/receiptCtrl.js"></script>
+  <script src="controllers/expenseCtrl.js"></script>
   
-
-  <!-- Factories -->
+<!-- Factories -->
   <script src="factories/authFactory.js"></script>
+  <script src="factories/expenseFactory.js"></script>
   
   
 </body>
