--- a/client/index.html
+++ b/client/index.html
@@ -18,28 +18,33 @@
 
 
 <!-- ********** - SCRIPTS - ************ -->
+
 <!-- Bootstrap -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+<script
+src="https://code.jquery.com/jquery-3.3.1.min.js"
+integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+crossorigin="anonymous"></script>  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 
 <!-- Angular -->
-  <script src="angular/angular.min.js"></script>
-  <script src="angular-route/angular-route.min.js"></script>
-  <!-- Angular Bootstrap-UI -->
-  <!-- <script src="./node_modules/angular-ui-bootstrap/dist/ui-bootstrap.js"></script> -->
-  
+<script src="angular/angular.min.js"></script>
+<script src="angular-route/angular-route.min.js"></script>
+<!-- <script src="../node_modules/firebase/index.js"></script> -->
+<script src="https://www.gstatic.com/firebasejs/4.9.1/firebase.js"></script>
+<script src="https://www.gstatic.com/firebasejs/5.0.0/firebase-firestore.js"></script>
 <!-- App -->
-  <script src="app.js"></script>
-
-<!-- Controllers -->
+<script src="app.js"></script>
+<!-- FIREBASE -->
+<script src="values/fb-creds.js"></script>
+  <!-- Factories -->
+  <script src="factories/authFactory.js"></script>
+  <script src="factories/fbStorageFactory.js"></script>
+  
+  <!-- Controllers -->
   <script src="controllers/welcomeCtrl.js"></script>
   <script src="controllers/authCtrl.js"></script>
   <script src="controllers/expenseCtrl.js"></script>
   
-<!-- Factories -->
-  <script src="factories/authFactory.js"></script>
-  <script src="factories/expenseFactory.js"></script>
   
   
 </body>
