--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">  
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+  <!-- <link rel="stylesheet" type="text/css" href="css/cuppa-datepicker-styles.css">   -->
   <link rel="stylesheet" type="text/css" href="css/main.css">
   <title>Stubtrax</title>
 </head>
@@ -20,30 +21,48 @@
 <!-- ********** - SCRIPTS - ************ -->
 
 <!-- Bootstrap -->
-<script
-src="https://code.jquery.com/jquery-3.3.1.min.js"
-integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-crossorigin="anonymous"></script>  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 
 <!-- Angular -->
 <script src="angular/angular.min.js"></script>
 <script src="angular-route/angular-route.min.js"></script>
-<!-- <script src="../node_modules/firebase/index.js"></script> -->
+<!-- Moment -->
+<!-- <script src="angular-cuppa-datepicker/datepicker-directive.js"></script>
+<script src="https://use.fontawesome.com/698aa4e2c2.js"></script> -->
+
+<!-- <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.6/moment-with-locales.js"></script>
+<script src="angular-moment-picker/angular-moment-picker.min.js"></script>
+<link href="//cdn.rawgit.com/indrimuska/angular-moment-picker/master/dist/angular-moment-picker.min.css" rel="stylesheet">  
+<script src="moment/moment.min.js"></script>
+<script src="angular-momentjs/angular-momentjs.min.js"></script> -->
+
+
+<!-- Firebase -->
 <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase.js"></script>
 <script src="https://www.gstatic.com/firebasejs/5.0.0/firebase-firestore.js"></script>
-<!-- App -->
+
+<!-- <script src="../node_modules/lodash/lodash.min.js"></script> -->
+
+<script src="ng-file-upload/ng-file-upload-shim.min.js"></script>
+<script src="ng-file-upload/ng-file-upload.min.js"></script>
+
+
+<!-- <script src="./node_modules/moment/min/moment.min.js"></script> -->
+<!-- <script src="./node_modules/angular-momentjs/angular-momentjs.min.js"></script> -->
+
+<!-- My Stuff -->
 <script src="app.js"></script>
-<!-- FIREBASE -->
 <script src="values/fb-creds.js"></script>
-  <!-- Factories -->
-  <script src="factories/authFactory.js"></script>
-  <script src="factories/fbStorageFactory.js"></script>
-  
-  <!-- Controllers -->
-  <script src="controllers/welcomeCtrl.js"></script>
-  <script src="controllers/authCtrl.js"></script>
-  <script src="controllers/expenseCtrl.js"></script>
+
+<!-- Factories -->
+<script src="factories/authFactory.js"></script>
+<script src="factories/fbStorageFactory.js"></script>
+
+<!-- Controllers -->
+<script src="controllers/welcomeCtrl.js"></script>
+<script src="controllers/authCtrl.js"></script>
+<script src="controllers/expenseCtrl.js"></script>
   
   
   
