--- a/client/index.html
+++ b/client/index.html
@@ -5,15 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">  
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-  <!-- <link rel="stylesheet" type="text/css" href="css/cuppa-datepicker-styles.css">   -->
-  <link rel="stylesheet" type="text/css" href="css/main.css">
+  <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Pacifico" rel="stylesheet">  <link rel="stylesheet" type="text/css" href="css/main.css">
   <title>Stubtrax</title>
 </head>
 <body ng-app="Stubtrax">
   
-  <header>
-    <div ng-include=" 'partials/navBar.html' "></div>
-  </header>
 
   <div ng-view></div>
 
